syntax = "proto3";

package rivet.backend.team;

import "proto/common.proto";
import "proto/backend/user.proto";
import "proto/backend/upload.proto";

enum DeactivateReason {
	UNKNOWN = 0;
	NO_PAYMENT_METHOD = 1;
	PAYMENT_FAILED = 2;
	BANNED = 3;
}

message Team {
	reserved 5, 8;

	rivet.common.Uuid team_id = 1;
	rivet.common.Uuid owner_user_id = 2;
	string display_name = 3;
	string bio = 4;
	optional rivet.common.Uuid profile_upload_id = 9;
	optional string profile_file_name = 10;
	optional upload.Provider profile_provider = 11;
	int64 create_ts = 6;
	Publicity publicity = 7;
	repeated DeactivateReason deactivate_reasons = 12;
}

enum Publicity {
	OPEN = 0;
	CLOSED = 1;
}

